fix(matrix): resolve transcript names immediately on startup